# GifLib

./: CMakeLists.txt
5.1.4/source/: dgif_lib.c  gif_hash.c  gif_hash.h
5.2.1/: CMakeLists.txt
5.2.1/include/: gif_hash.h  gif_lib.h
source/: egif_lib.c
